--- a/app/components/Features.module.css
+++ b/app/components/Features.module.css
@@ -69,18 +69,18 @@
   width: 100%;
   position: relative;
   z-index: 10;
-  padding: 1rem 1rem 4rem 4rem;
+  padding: 4rem 1rem;
 }
 
 @media (min-width: 640px) {
   .contentContainer {
-    padding: 1.5rem 1.5rem 4rem 1.5rem;
+    padding: 4rem 1.5rem;
   }
 }
 
 @media (min-width: 1024px) {
   .contentContainer {
-    padding: 2rem 2rem 4rem 4rem;
+    padding: 4rem 2rem;
   }
 }
 
